# `kglab` changelog

## 0.1.6

2021-01-??

  * extend RDFlib serialization with `urlpath` support
  * added `code_of_conduct.md`


## 0.1.5

2021-01-04

  * renamed serialization methods, e.g., `save_ttl()` -- **WILL BREAK THINGS**
  * impl `load_rdf_text()` and `save_rdf_text()` to De/Ser as text
  * type checking based on `typing` and `mypy`
  * corrected the `networkx` examples to use `DiGraph` for directed graphs
  * generated `meta.yml` for conda support
  * use `mkdocs` to generate documentation
  * add method to return SPARQL query result set as a `pandas` DataFrame
  * integrate with `python-igraph`, `leidenalg`, `cairocffi` to support iGraph
  * provide simple `OWL-RL` inference with `infer_rdfs_closure()` and `infer_owlrl_closure()`
  * add `Subgraph` class for projecting onto `networkx`
  * add `Measure` class for measuring graphs and creating simplex generators
  * use `coverage` for unit test coverage
  * use `chocolate` for enhanced kwargs
  * make `KnowledgeGraph` class GPU-aware
  * add `ShapeFactory` and related classes for evolving shape prediction


## 0.1.4

2020-12-06

  * added `pySHACL` examples
  * resolved Google Colab errors registering the `rdflib-jsonld` plugin
  * comparing timing info across serialization methods
  * simplified the example notebook naming convention


## 0.1.3

2020-12-04

  * resolved removal of `grave` dependencies
  * added arrows to `pyvis` example by making it a directed graph
  * kudos @dmoore247


## 0.1.2

2020-11-30

  * support for dependabot
  * added a logo
  * interactive visualizations in `pyvis` and `grave`
  * SPARQL query examples
  * running graph algorithms in `networkx`
  * Parquet files using `pyarrow`
  * examples of annotation that combine use of SPARQL, SKOS, etc.
  * added instructions for installing/running JupyterLab
  * examples of SRL inference using `pslpython`
  * demo use of vector embedding with `gensim`
  * examples of string similarity with `pylev`


## 0.1.1

2020-11-09
