@@ -1,5 +1,7 @@
 cairocffi >= 1.2.0
 chocolate >= 0.0.2
+fsspec[gs,s3] >= 0.8.5
+gcsfs >= 0.7.1
 gensim >= 3.8.3
 GPUtil >= 1.4.0
 leidenalg >= 0.8.3
@@ -7,7 +9,7 @@ matplotlib >= 3.2.1
 networkx >= 2.5
 numpy >= 1.19.4
 owlrl >= 5.2.1
-pandas >= 1.1.4
+pandas >= 1.2.0
 pslpython >= 2.2.2
 pyarrow >= 2.0.0
 pylev >= 1.3.0
